tests/cases/errors/parser/stmt_if1.vnm
fn main() {
  let x = 0;
  let y = 1;
  if x < 1) {
    print x + y;
  }
  return 0;
}

main();
